src/test/scala/wacc/wacc_examples/invalid/syntaxErr/classes/classBadInstantiation.wacc
# program has invalid instantiation - 'new' keyword and class name are conflated

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
    class MyClass {
        int x
    }

    MyClass x = newMyClass { 5 }
end